[gd_scene load_steps=14 format=3 uid="uid://cto5vhf8je43u"]

[ext_resource type="Texture2D" uid="uid://drvjwf4btxikl" path="res://Assets/map_assets/Dungeon Tile Set.png" id="1_yx20t"]
[ext_resource type="Script" uid="uid://bsxuq4eyhr3d6" path="res://Scripts/Map Scripts/Maps/test_map.gd" id="2_kpyq2"]
[ext_resource type="AudioStream" uid="uid://byuydt2phak4l" path="res://Assets/audio_assets/Level_1.mp3" id="2_lvb5c"]
[ext_resource type="PackedScene" uid="uid://0rfuwdjdrqfs" path="res://Scenes/characters/player_character.tscn" id="3_mt3ia"]
[ext_resource type="PackedScene" uid="uid://dxpndiwc6r55m" path="res://Scenes/characters/enemy_character.tscn" id="4_ufb8e"]
[ext_resource type="PackedScene" uid="uid://dpyidhh5jptpv" path="res://Scenes/Map Scenes/Map Assets/zill_zone.tscn" id="5_ufb8e"]
[ext_resource type="PackedScene" uid="uid://0uldvs6gsiqw" path="res://Scenes/Game Scenes/game_state_ui.tscn" id="7_bdm0q"]
[ext_resource type="PackedScene" uid="uid://cf47rws7ojlfr" path="res://Scenes/Map Scenes/Map Assets/red_bull.tscn" id="8_wnxao"]
[ext_resource type="PackedScene" uid="uid://bmu67w1r0anm3" path="res://Scenes/Game Scenes/pause_menu.tscn" id="9_h7fm2"]
[ext_resource type="PackedScene" uid="uid://doaxa1g3ok7k5" path="res://Scenes/Map Scenes/Map Assets/checkpoint.tscn" id="10_kpyq2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lvb5c"]
texture = ExtResource("1_yx20t")
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
5:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
12:10/0 = 0
12:11/0 = 0
12:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:10/0 = 0
13:11/0 = 0

[sub_resource type="TileSet" id="TileSet_dorj5"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_lvb5c")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ufb8e"]
a = Vector2(1, -52)
b = Vector2(579, -52)

[node name="TileMap" type="TileMap"]
process_mode = 1
tile_set = SubResource("TileSet_dorj5")
format = 2
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(-196573, 131072, 2, -196572, 131072, 2, -196571, 131072, 2, -196570, 131072, 2, -196574, 131072, 2, -196575, 131072, 2, -196576, 131072, 2, -196577, 131072, 2, -196578, 131072, 2, -196579, 131072, 2, -196580, 131072, 2, -196581, 131072, 2, -196582, 131072, 2, -196583, 131072, 2, -196584, 131072, 2, -196585, 131072, 2, -196586, 131072, 2, -196587, 131072, 2, -196588, 131072, 2, -196589, 131072, 2, -196590, 131072, 2, -196591, 131072, 2, -196592, 131072, 2, -196593, 131072, 2, -131056, 131072, 2, -131055, 131072, 2, -131054, 131072, 2, -131053, 131072, 2, -131052, 131072, 2, -131051, 131072, 2, -131050, 131072, 2, -131049, 131072, 2, -131048, 131072, 2, -65517, 131072, 2, -65518, 131072, 2, -65519, 131072, 2, -65520, 131072, 2, -65521, 131072, 2, -65522, 131072, 2, -65523, 131072, 2, -65524, 131072, 2, -65525, 131072, 2, -65526, 131072, 2, -65527, 131072, 2, -65528, 131072, 2, -65529, 131072, 2, -65530, 131072, 2, -65531, 131072, 2, -65532, 131072, 2, -65533, 131072, 2, -131070, 131072, 2, -131071, 131072, 2, -131072, 131072, 2, -196608, 131072, 2, -131073, 131072, 2, -131074, 131072, 2, -65539, 131072, 2, -65540, 131072, 2, -131076, 131072, 2, -131075, 131072, 2, -196611, 131072, 2, -196610, 131072, 2, -196609, 131072, 2, -262144, 131072, 2, -196607, 131072, 2, -131069, 131072, 2, -131068, 131072, 2, -131067, 131072, 2, -131066, 131072, 2, -5, 131072, 2, -6, 131072, 2, 65530, 131072, 2, 131066, 131072, 2, 131065, 131072, 2, 196601, 131072, 2, -7, 131072, 2, -65543, 131072, 2, -65542, 131072, 2, -65541, 131072, 2, -65538, 131072, 2, -65537, 131072, 2, -131065, 131072, 2, -131064, 131072, 2, -131063, 131072, 2, -131062, 131072, 2, -131061, 131072, 2, -131060, 131072, 2, -131059, 131072, 2, -131058, 131072, 2, -131057, 131072, 2, 18, 131072, 2, 65553, 131072, 2, 65552, 131072, 2, 65551, 131072, 2, 65554, 131072, 2, 65555, 131072, 2, 65556, 131072, 2, 65557, 131072, 2, 65558, 131072, 2, 65559, 131072, 2, 65560, 131072, 2, 65561, 131072, 2, 65562, 131072, 2, 65563, 131072, 2, 65564, 131072, 2, 65565, 131072, 2, 65566, 131072, 2, 65567, 131072, 2, 65568, 131072, 2, 65569, 131072, 2, 65570, 131072, 2, 65571, 131072, 2, 65572, 131072, 2, 65573, 131072, 2, 65574, 131072, 2, 65575, 131072, 2, 65576, 131072, 2, 65577, 131072, 2, 65578, 131072, 2, 131115, 131072, 2, 131116, 131072, 2, 131114, 131072, 2, 32, 131072, 2, 33, 131072, 2, 34, 131072, 2, 35, 131072, 2, 36, 131072, 2, 37, 131072, 2, 25, 131072, 2, 26, 131072, 2, 27, 131072, 2, 28, 131072, 2, -65507, 131072, 2, -65506, 131072, 2, -65505, 131072, 2, -65504, 131072, 2, -65503, 131072, 2, -65502, 131072, 2, -131037, 131072, 2, -131036, 131072, 2, -131035, 131072, 2, -65508, 131072, 2, -65509, 131072, 2, -65501, 131072, 2, -131044, 131072, 2, -131043, 131072, 2, -131042, 131072, 2, -131041, 131072, 2, -131040, 131072, 2, -131039, 131072, 2, -131038, 131072, 2, 131100, 131072, 2, 30, 131072, 2, 31, 131072, 2, -65500, 131072, 2, -65499, 131072, 2, -65498, 131072, 2, -131034, 131072, 2, -131033, 131072, 2, 131105, 131072, 2, 131104, 131072, 2, 131103, 131072, 2, 131102, 131072, 2, 131101, 131072, 2, 196636, 131072, 2, 196635, 131072, 2, 196637, 131072, 2, 196638, 131072, 2, 196639, 131072, 2, 196640, 131072, 2, 131106, 131072, 2, 196641, 131072, 2, 262173, 131072, 2, 262174, 131072, 2, 262175, 131072, 2, 262176, 131072, 2, 262177, 131072, 2, 262178, 131072, 2, 262179, 131072, 2, 262180, 131072, 2, 196644, 131072, 2, 196645, 131072, 2, 131108, 131072, 2, 131107, 131072, 2, 131109, 131072, 2, 196646, 131072, 2, 196642, 131072, 2, 196643, 131072, 2, 131110, 131072, 2, 262181, 131072, 2, 262182, 131072, 2, 262183, 131072, 2, 262184, 131072, 2, 262185, 131072, 2, 262186, 131072, 2, 262187, 131072, 2, 262188, 131072, 2, 262189, 131072, 2, 262190, 131072, 2, 262191, 131072, 2, 262192, 131072, 2, 262193, 131072, 2, 262194, 131072, 2, 262195, 131072, 2, 262196, 131072, 2, 262197, 131072, 2, 262198, 131072, 2, 262199, 131072, 2, 196663, 131072, 2, 131127, 131072, 2, 65591, 131072, 2, 55, 131072, 2, -65481, 65536, 2, -131017, 65536, 2, -131018, 65536, 2, -131019, 65536, 2, -131020, 65536, 2, -131021, 65536, 2, -131022, 65536, 2, -131023, 65536, 2, -131024, 65536, 2, -131025, 65536, 2, -131026, 65536, 2, -131027, 65536, 2, -131028, 65536, 2, -131029, 65536, 2, -131030, 65536, 2, -131031, 131072, 2, -196567, 131072, 2, -196566, 131072, 2, -196565, 131072, 2, -196564, 131072, 2, -196563, 131072, 2, -196562, 131072, 2, -196561, 131072, 2, -196560, 131072, 2, -196559, 131072, 2, -196558, 131072, 2, -196557, 131072, 2, -196556, 131072, 2, -65483, 65536, 2, -65482, 65536, 2, -65484, 65536, 2, -65485, 65536, 2, -65486, 65536, 2, -65487, 65536, 2, -65488, 65536, 2, -65489, 65536, 2, 46, 131072, 2, 45, 131072, 2, 44, 131072, 2, 43, 131072, 2, 42, 131072, 2, 41, 131072, 2, -65491, 65536, 2, -65490, 65536, 2, -65492, 65536, 2, -65493, 65536, 2, -65494, 65536, 2, 65579, 131072, 2, 196650, 131072, 2, 196649, 131072, 2, 196651, 131072, 2, 196652, 131072, 2, 196653, 131072, 2, 196654, 131072, 2, 196655, 131072, 2, 196656, 131072, 2, 196657, 131072, 2, 196658, 131072, 2, 196659, 131072, 2, 196660, 131072, 2, 131125, 131072, 2, 196661, 131072, 2, 131126, 131072, 2, 65590, 131072, 2, 54, 131072, 2, 52, 131072, 2, 51, 131072, 2, 50, 131072, 2, 65586, 131072, 2, 65585, 131072, 2, 65584, 131072, 2, 65583, 131072, 2, 65582, 131072, 2, 65581, 131072, 2, 131118, 131072, 2, 131117, 131072, 2, 65580, 131072, 2, 47, 131072, 2, 48, 131072, 2, 49, 131072, 2, 65587, 131072, 2, 131119, 131072, 2, 131120, 131072, 2, 131121, 131072, 2, 131122, 131072, 2, 131123, 131072, 2, 131124, 131072, 2, 65588, 131072, 2, 53, 131072, 2, 65589, 131072, 2, 196662, 131072, 2, 327735, 131072, 2, 393271, 131072, 2, 458807, 131072, 2, 458806, 131072, 2, 458805, 131072, 2, 458804, 131072, 2, 458803, 131072, 2, 458802, 131072, 2, 458801, 131072, 2, 458800, 131072, 2, 458799, 131072, 2, 458798, 131072, 2, 458797, 131072, 2, 458796, 131072, 2, 524332, 131072, 2, 524331, 131072, 2, 524330, 131072, 2, 524329, 131072, 2, 524328, 131072, 2, 524327, 131072, 2, 524326, 131072, 2, 524325, 131072, 2, 458790, 131072, 2, 458791, 131072, 2, 458792, 131072, 2, 458793, 131072, 2, 458794, 131072, 2, 458795, 131072, 2, 524335, 131072, 2, 524334, 131072, 2, 524333, 131072, 2, 524336, 131072, 2, 524337, 131072, 2, 524338, 131072, 2, 524339, 131072, 2, 524340, 131072, 2, 524341, 131072, 2, 524342, 131072, 2, 524343, 131072, 2, 458789, 131072, 2, 458788, 131072, 2, 458787, 131072, 2, 458786, 131072, 2, 458785, 131072, 2, 458784, 131072, 2, 458783, 131072, 2, 458782, 131072, 2, 458781, 131072, 2, 458780, 131072, 2, 458779, 131072, 2, 458778, 131072, 2, 458777, 131072, 2, 458776, 131072, 2, 458775, 131072, 2, 458774, 131072, 2, 458773, 131072, 2, 458772, 131072, 2, 458771, 131072, 2, 458770, 131072, 2, 458769, 131072, 2, 458768, 131072, 2, 458767, 131072, 2, 458766, 131072, 2, 458765, 131072, 2, 458764, 131072, 2, 458763, 131072, 2, 458762, 131072, 2, 458761, 131072, 2, 458760, 131072, 2, 458759, 131072, 2, 458758, 131072, 2, 458757, 131072, 2, 458756, 131072, 2, 458755, 131072, 2, 458754, 131072, 2, 458753, 131072, 2, 458752, 131072, 2, 524287, 131072, 2, 524286, 131072, 2, 524285, 131072, 2, 524284, 131072, 2, 524283, 131072, 2, 524282, 131072, 2, 524281, 131072, 2, 458746, 131072, 2, 393210, 131072, 2, 393209, 131072, 2, 327673, 131072, 2, 458745, 131072, 2, 393211, 131072, 2, 393212, 131072, 2, 327676, 131072, 2, 327677, 131072, 2, 327678, 131072, 2, 327679, 131072, 2, 262144, 131072, 2, 262145, 131072, 2, 262146, 131072, 2, 262147, 131072, 2, 327684, 131072, 2, 327685, 131072, 2, 327683, 131072, 2, 327682, 131072, 2, 327681, 131072, 2, 327680, 131072, 2, 393215, 131072, 2, 393214, 131072, 2, 393213, 131072, 2, 327686, 131072, 2, 327687, 131072, 2, 327688, 131072, 2, 327689, 131072, 2, 262153, 131072, 2, 262154, 131072, 2, 262155, 131072, 2, 262156, 131072, 2, 262157, 131072, 2, 327693, 131072, 2, 327692, 131072, 2, 327691, 131072, 2, 327690, 131072, 2, 393222, 131072, 2, 393221, 131072, 2, 393223, 131072, 2, 393224, 131072, 2, 393225, 131072, 2, 393226, 131072, 2, 393227, 131072, 2, 393228, 131072, 2, 393229, 131072, 2, 393230, 131072, 2, 393231, 131072, 2, 393232, 131072, 2, 393233, 131072, 2, 393234, 131072, 2, 327699, 131072, 2, 327700, 131072, 2, 327701, 131072, 2, 327702, 131072, 2, 327703, 131072, 2, 327704, 131072, 2, 327705, 131072, 2, 327706, 131072, 2, 327698, 131072, 2, 327697, 131072, 2, 327696, 131072, 2, 327695, 131072, 2, 327707, 131072, 2, 327708, 131072, 2, 327709, 131072, 2, 327710, 131072, 2, 327711, 131072, 2, 327712, 131072, 2, 327713, 131072, 2, 327714, 131072, 2, 327715, 131072, 2, 327716, 131072, 2, 327717, 131072, 2, 327718, 131072, 2, 327719, 131072, 2, 327720, 131072, 2, 327694, 131072, 2, 327721, 131072, 2, 327722, 131072, 2, 327723, 131072, 2, 327724, 131072, 2, 327725, 131072, 2, 327726, 131072, 2, 327727, 131072, 2, 327728, 131072, 2, 327729, 131072, 2, 327730, 131072, 2, 327731, 131072, 2, 327732, 131072, 2, 327733, 131072, 2, 327734, 131072, 2, 393270, 131072, 2, 393269, 131072, 2, 393268, 131072, 2, 393267, 131072, 2, 393266, 131072, 2, 393265, 131072, 2, 393264, 131072, 2, 393263, 131072, 2, 393262, 131072, 2, 393261, 131072, 2, 393260, 131072, 2, 393259, 131072, 2, 393258, 131072, 2, 393257, 131072, 2, 393256, 131072, 2, 393255, 131072, 2, 393254, 131072, 2, 393253, 131072, 2, 393250, 131072, 2, 393251, 131072, 2, 393252, 131072, 2, 393249, 131072, 2, 393248, 131072, 2, 393247, 131072, 2, 393246, 131072, 2, 393245, 131072, 2, 393244, 131072, 2, 393243, 131072, 2, 393242, 131072, 2, 393241, 131072, 2, 393240, 131072, 2, 393239, 131072, 2, 393238, 131072, 2, 393237, 131072, 2, 393236, 131072, 2, 393235, 131072, 2, 393220, 131072, 2, 393219, 131072, 2, 393218, 131072, 2, 393217, 131072, 2, 393216, 131072, 2, 458751, 131072, 2, 458750, 131072, 2, 458749, 131072, 2, 458748, 131072, 2, 458747, 131072, 2, 589818, 131072, 2, 589817, 131072, 2, 589819, 131072, 2, 589820, 131072, 2, 589821, 131072, 2, 589822, 131072, 2, 589823, 131072, 2, 524288, 131072, 2, 524289, 131072, 2, 524290, 131072, 2, 524291, 131072, 2, 524292, 131072, 2, 524293, 131072, 2, 524294, 131072, 2, 524295, 131072, 2, 524296, 131072, 2, 524297, 131072, 2, 524298, 131072, 2, 524299, 131072, 2, 524300, 131072, 2, 524301, 131072, 2, 524302, 131072, 2, 524303, 131072, 2, 524304, 131072, 2, 524305, 131072, 2, 524306, 131072, 2, 524307, 131072, 2, 524308, 131072, 2, 524309, 131072, 2, 524310, 131072, 2, 524311, 131072, 2, 524312, 131072, 2, 524313, 131072, 2, 524314, 131072, 2, 524315, 131072, 2, 524316, 131072, 2, 524317, 131072, 2, 524318, 131072, 2, 524319, 131072, 2, 524320, 131072, 2, 524321, 131072, 2, 524322, 131072, 2, 524323, 131072, 2, 524324, 131072, 2, 65529, 131072, 2, 65546, 131072, 2, 65547, 131072, 2, 65548, 131072, 2, 65549, 131072, 2, 65550, 131072, 2, 131087, 131072, 2, 131088, 131072, 2, 131089, 131072, 2, 131090, 131072, 2, 19, 131072, 2, -65516, 131072, 2, -65515, 131072, 2, -917499, 65536, 2, -131016, 65536, 2, -131015, 65536, 2, -131014, 65536, 2, -65480, 65536, 2, -65479, 65536, 2, -65478, 65536, 2)
layer_1/name = "foreground"
layer_1/tile_data = PackedInt32Array(196604, 65536, 2, 196605, 65536, 2, 196606, 65536, 2, 196607, 65536, 2, 131072, 65536, 2, 131073, 65536, 2, 131074, 65536, 2, 131075, 65536, 2, 131076, 65536, 2, 262140, 65536, 2, 262141, 65536, 2, 262142, 65536, 2, 262143, 65536, 2, 196608, 65536, 2, 196609, 65536, 2, 196610, 65536, 2, 196611, 65536, 2, 196612, 65536, 2, 196601, 65536, 2, 196602, 65536, 2, 196603, 65536, 2, 327673, 131072, 3, 327674, 131072, 3, 327675, 131072, 3, 262137, 65536, 2, 262138, 65536, 2, 262139, 65536, 2, 327676, 131072, 3, 327677, 131072, 3, 327678, 131072, 3, 327679, 131072, 3, 262144, 131072, 3, 262145, 131072, 3, 262146, 131072, 3, 262147, 131072, 3, 262148, 131072, 3, 65540, 131072, 2, 65539, 131072, 2, 65538, 131072, 2, 65537, 131072, 2, 65536, 131072, 2, 131071, 131072, 2, 131070, 131072, 2, 131069, 131072, 2, 131068, 131072, 2, 131067, 131072, 2, 131066, 131072, 2, 131065, 786432, 11, 65529, 786432, 10, -131079, 65536, 2, -131078, 65536, 2, -131077, 65536, 2, -131076, 393216, 5, -131073, 327680, 5, -196608, 65536, 2, -196607, 65536, 2, -196606, 65536, 2, -196605, 65536, 2, -196604, 65536, 2, -131068, 65536, 2, -65532, 131072, 2, 3, 131072, 2, 2, 131072, 2, 4, 131072, 2, 1, 131072, 2, 0, 131072, 2, 65535, 131072, 2, 65534, 131072, 2, 65533, 131072, 2, 65532, 131072, 2, 65531, 131072, 2, 65530, 131072, 2, -6, 131072, 2, -65542, 131072, 2, -65541, 131072, 2, -5, 131072, 2, -65540, 131072, 2, -65538, 131072, 2, -2, 131072, 2, -3, 131072, 2, -4, 131072, 2, -65537, 131072, 2, -65536, 131072, 2, -65535, 131072, 2, -65534, 131072, 2, -1, 131072, 2, -131072, 131072, 2, -131071, 131072, 2, -131070, 131072, 2, -131069, 327680, 5, -65533, 131072, 2, 131077, 65536, 2, 131078, 65536, 2, 131079, 65536, 2, 131080, 65536, 2, 131081, 65536, 2, 131082, 65536, 2, 131084, 65536, 2, 131085, 65536, 2, 131086, 65536, 2, 131083, 65536, 2, 131087, 65536, 2, 131088, 65536, 2, 131089, 65536, 2, 262159, 131072, 3, 262160, 131072, 3, 262161, 131072, 3, 196623, 65536, 2, 196624, 65536, 2, 196625, 65536, 2, 196620, 65536, 2, 196621, 65536, 2, 196622, 65536, 2, 196617, 65536, 2, 196618, 65536, 2, 196619, 65536, 2, 196615, 65536, 2, 196616, 65536, 2, 196613, 65536, 2, 196614, 65536, 2, 262149, 131072, 3, 262150, 131072, 3, 262151, 131072, 3, 262152, 131072, 3, 262153, 131072, 3, 262154, 131072, 3, 262155, 131072, 3, 262156, 131072, 3, 262157, 131072, 3, 262158, 131072, 3, -131067, 65536, 2, -196603, 65536, 2, -131066, 65536, 2, -131065, 65536, 2, -196601, 65536, 2, -196602, 65536, 2, -196600, 65536, 2, -196599, 65536, 2, -131063, 65536, 2, -131064, 65536, 2, -65528, 65536, 2, -65527, 65536, 2, -65526, 65536, 2, -131062, 65536, 2, -196598, 65536, 2, -196597, 65536, 2, -196596, 65536, 2, -131060, 65536, 2, -131061, 65536, 2, -131059, 65536, 2, -196594, 65536, 2, -196593, 65536, 2, -196595, 65536, 2, -131058, 65536, 2, -131057, 65536, 2, -131056, 393216, 5, -196592, 65536, 2, -196591, 393216, 5, -65529, 327680, 5, -65525, 393216, 5, 65545, 327680, 9, 9, 327680, 9, 14, 655360, 3, 65550, 655360, 4, 15, 720896, 3, 65551, 720896, 4, -65524, 131072, 2, -65523, 131072, 2, -65522, 131072, 2, -65521, 131072, 2, -65520, 131072, 2, -65519, 131072, 2, 17, 131072, 2, 65553, 131072, 2, 16, 131072, 2, 65552, 131072, 2, 65548, 131072, 2, 65549, 131072, 2, 12, 131072, 2, 13, 131072, 2, 11, 131072, 2, 10, 131072, 2, 65546, 131072, 2, 65547, 131072, 2, 65544, 131072, 2, 65543, 131072, 2, 65542, 131072, 2, 65541, 131072, 2, 5, 131072, 2, 6, 131072, 2, 7, 131072, 2, 8, 131072, 2, -65530, 131072, 2, -65531, 131072, 2, -65539, 131072, 2, -196612, 65536, 2, -196609, 65536, 2, -131075, 131072, 2, -196611, 131072, 2, -196610, 131072, 2, -131074, 131072, 2, 65554, 327680, 1, 19, 327680, 1, -65516, 327680, 1, -131051, 327680, 1, -196586, 327680, 1, 196626, 65536, 2, 262162, 131072, 3, 262163, 131072, 3, 262164, 131072, 3, 262165, 131072, 3, 262166, 131072, 3, 196630, 65536, 2, 131094, 65536, 2, 65558, 65536, 2, 22, 65536, 2, -65514, 65536, 2, -131050, 65536, 2, -65515, 65536, 2, 21, 65536, 2, 65557, 65536, 2, 131093, 65536, 2, 196629, 65536, 2, 196628, 65536, 2, 131092, 65536, 2, 65556, 65536, 2, 20, 65536, 2, 131091, 65536, 2, 196627, 65536, 2, 131090, 65536, 2, 65555, 65536, 2, -7, 65536, 2, -65543, 65536, 2, -196585, 65536, 2, -131049, 65536, 2, -65513, 65536, 2, 23, 65536, 2, 65559, 65536, 2, 196631, 65536, 2, 131095, 65536, 2, 196632, 65536, 2, 196633, 65536, 2, 196634, 65536, 2, 196635, 65536, 2, 196636, 65536, 2, 196637, 65536, 2, 196638, 65536, 2, 131102, 65536, 2, 65566, 65536, 2, 30, 65536, 2, -65506, 65536, 2, -131042, 65536, 2, -196578, 65536, 2, -196579, 65536, 2, -196580, 65536, 2, -196581, 65536, 2, -196582, 65536, 2, -196583, 65536, 2, -196584, 65536, 2, -131048, 65536, 2, -65512, 65536, 2, 24, 65536, 2, 65560, 65536, 2, 131096, 65536, 2, 131097, 65536, 2, 131098, 65536, 2, 131099, 65536, 2, 131100, 65536, 2, 65565, 65536, 2, 131101, 65536, 2, 65563, 65536, 2, 65562, 65536, 2, 65561, 65536, 2, 27, 65536, 2, 28, 65536, 2, 65564, 65536, 2, 25, 65536, 2, -131047, 65536, 2, -131046, 65536, 2, -65510, 65536, 2, 26, 65536, 2, -65511, 65536, 2, -131045, 65536, 2, -131044, 65536, 2, -65508, 65536, 2, -131043, 65536, 2, -65507, 65536, 2, 29, 65536, 2, -65509, 65536, 2, 262167, 131072, 3, 262168, 131072, 3, 262173, 131072, 3, 262172, 131072, 3, 262171, 131072, 3, 262170, 131072, 3, 262169, 131072, 3, 262174, 131072, 3, -196570, 65536, 2, -196569, 65536, 2, -131033, 65536, 2, -65497, 65536, 2, 39, 65536, 2, 65575, 65536, 2, 131111, 65536, 2, 196647, 65536, 2, 196646, 65536, 2, 65574, 65536, 2, 131110, 65536, 2, -65498, 65536, 2, 38, 65536, 2, -131034, 65536, 2, 262182, 65536, 3, 262183, 65536, 3, -196568, 65536, 2, -196567, 65536, 2, -131031, 65536, 2, -65495, 65536, 2, 41, 65536, 2, 65577, 65536, 2, 131113, 65536, 2, 196649, 65536, 2, 196648, 65536, 2, 40, 65536, 2, -65496, 65536, 2, -131032, 65536, 2, 65576, 65536, 2, 131112, 65536, 2, 262184, 131072, 3, 262185, 131072, 3, -262145, 65536, 2, -327681, 65536, 2, -393217, 65536, 2, -393220, 65536, 2, -327684, 65536, 2, -262148, 65536, 2, -458756, 65536, 2, -458753, 65536, 2, -458757, 65536, 2, -393221, 65536, 2, -327685, 65536, 2, -262149, 65536, 2, -196613, 65536, 2, -196614, 65536, 2, -262150, 65536, 2, -262151, 65536, 2, -327687, 65536, 2, -393223, 65536, 2, -393222, 65536, 2, -458758, 65536, 2, -327686, 65536, 2, -196615, 65536, 2, -458759, 65536, 2, -262144, 65536, 2, -327680, 65536, 2, -393216, 65536, 2, -458752, 65536, 2, -524288, 65536, 2, -262143, 65536, 2, -327679, 65536, 2, -393215, 65536, 2, -458751, 65536, 2, -524287, 65536, 2, -917503, 65536, 2, -851975, 65536, 2, -786439, 65536, 2, -720902, 65536, 2, -655366, 65536, 2, -589830, 65536, 2, -524294, 65536, 2, -524295, 65536, 2, -589831, 65536, 2, -655367, 65536, 2, -720903, 65536, 2, -327675, 65536, 2, -262139, 65536, 2, -393211, 65536, 2, -458747, 65536, 2, -524283, 65536, 2, -589819, 65536, 2, -655355, 65536, 2, -720891, 65536, 2, -786427, 65536, 2, -851963, 65536, 2, -917500, 65536, 2, -851964, 65536, 2, -786428, 65536, 2, -720892, 65536, 2, -655356, 65536, 2, -589820, 65536, 2, -524284, 65536, 2, -458748, 65536, 2, -393212, 65536, 2, -327676, 65536, 2, -262140, 65536, 2, -262141, 65536, 2, -262142, 65536, 2, -327678, 65536, 2, -393214, 65536, 2, -458750, 65536, 2, -458749, 65536, 2, -393213, 65536, 2, -327677, 65536, 2, -524286, 65536, 2, -524285, 65536, 2, -917502, 65536, 2, -917501, 65536, 2, -786438, 65536, 2, -851974, 65536, 2, -917510, 65536, 2, -917511, 327680, 1, -917509, 65536, 2, -917508, 65536, 2, -917507, 65536, 2, -917506, 65536, 2, -917505, 65536, 2, -983040, 65536, 2, -983039, 65536, 2, -983038, 65536, 2, -983037, 65536, 2, -983036, 65536, 2, -917504, 65536, 2, -851969, 65536, 2, -851970, 65536, 2, -851971, 65536, 2, -851972, 65536, 2, -851973, 65536, 2, -262146, 131072, 2, -524291, 131072, 2, -589827, 131072, 2, -589828, 131072, 2, -589829, 131072, 2, -524293, 131072, 2, -524292, 131072, 2, -524289, 131072, 2, -589824, 131072, 2, -589823, 131072, 2, -589822, 131072, 2, -589821, 131072, 2, -655357, 131072, 2, -720893, 131072, 2, -786429, 131072, 2, -851965, 131072, 2, -851966, 131072, 2, -851967, 131072, 2, -851968, 131072, 2, -786433, 131072, 2, -786434, 131072, 2, -786435, 131072, 2, -786436, 131072, 2, -786437, 131072, 2, -720901, 131072, 2, -655365, 131072, 2, -655364, 131072, 2, -720900, 131072, 2, -720899, 131072, 2, -655363, 131072, 2, -720898, 131072, 2, -655362, 131072, 2, -655361, 131072, 2, -655360, 131072, 2, -589825, 131072, 2, -589826, 131072, 2, -720896, 131072, 2, -720897, 131072, 2, -786432, 131072, 2, -786431, 131072, 2, -786430, 131072, 2, -720894, 131072, 2, -720895, 131072, 2, -655359, 131072, 2, -655358, 131072, 2, -65517, 131072, 2, -65518, 131072, 2, 18, 131072, 2, -262147, 131072, 2, -327683, 131072, 2, -393219, 131072, 2, -458755, 131072, 2, -524290, 131072, 2, -458754, 131072, 2, -393218, 131072, 2, -327682, 131072, 2, -196557, 65536, 2, -196556, 65536, 2, -196555, 65536, 2, -196554, 65536, 2, -196553, 65536, 2, -262138, 393216, 1, -983035, 393216, 1, -196566, 65536, 2, -196565, 65536, 2, -196564, 65536, 2, -196563, 65536, 2, -196562, 65536, 2, -196561, 65536, 2, -196560, 65536, 2, -196559, 65536, 2, -196558, 65536, 2, -196552, 65536, 2, -196551, 65536, 2, -196550, 65536, 2)
script = ExtResource("2_kpyq2")

[node name="red_bull_cans" type="Node" parent="."]

[node name="red_bull" parent="red_bull_cans" instance=ExtResource("8_wnxao")]
position = Vector2(143, -56)

[node name="player_character" parent="." instance=ExtResource("3_mt3ia")]
light_mask = 2
visibility_layer = 4
position = Vector2(422, -92)

[node name="game_camera" type="Camera2D" parent="player_character"]
position = Vector2(-3, 12)
zoom = Vector2(3, 3)
position_smoothing_enabled = true
drag_vertical_enabled = true
drag_top_margin = 0.61

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_lvb5c")
pitch_scale = 1.1
autoplay = true
max_distance = 4026.0
parameters/looping = true

[node name="kill_zones" type="Node" parent="."]

[node name="zill_zone" parent="kill_zones" instance=ExtResource("5_ufb8e")]
position = Vector2(256, 172)

[node name="kill_zone_shape" type="CollisionShape2D" parent="kill_zones/zill_zone"]
shape = SubResource("SegmentShape2D_ufb8e")

[node name="enemies" type="Node" parent="."]

[node name="enemy_character" parent="enemies" instance=ExtResource("4_ufb8e")]
position = Vector2(785, -105)

[node name="pause_menu" parent="." instance=ExtResource("9_h7fm2")]

[node name="checkpoints" type="Node" parent="."]

[node name="checkpoint" parent="checkpoints" instance=ExtResource("10_kpyq2")]
position = Vector2(932, -66)

[node name="game_state_UI" parent="." instance=ExtResource("7_bdm0q")]
